tests/reference/asr-generics_03-4e7d821.stderr
semantic error: Both type variables must support addition operation
 --> tests/errors/generics_03.py:6:12
  |
6 |     return x + y
  |            ^^^^^ 
